[package]
name = "hash_utils"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.10"
clap = { version = "3.1.18", features = ["derive"] }
md-5 = "0.10.1"
base64 = "0.20.0-alpha.1"

[profile.release]
opt-level = 3